Projet GL/Projet_GL/src/test/deca/context/valid/increment4/simple-extends.deca
// Test simple extends

// Hisotrique : cree le 17/01/2023

class A{
    int a;
}

class B extends A{
    float b;
}

class C{}