Projet GL/Projet_GL/src/test/deca/context/invalid/increment4/not-identifier-class.deca
// Test : condition of rule 1.3

// Historique : cree le 17/01/2023

// Must be refused
class A extends print{}